# monument

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  default.nix  flake.nix  monument.cabal  monument.nix  monument.pest  release.nix  shell.nix  test.mo
app/: Main.hs
app/Lib/: Macro.hs  Parser.hs  Reader.hs  ReductionSystem.hs  Term.hs  Utils.hs
app/Lib/Component/: Macro.hs  Rule.hs  Term.hs
app/Lib/Parse/: Comment.hs  Meta.hs  Parser.hs  Regexlike.hs  Rule.hs  Term.hs
app/Lib/System/: DFA.hs  ENFA.hs  TRS.hs
app/Lib/Utils/: List.hs
examples/: standard.mo
src/: ast.rs  interpreter.rs  main.rs
src/backend/: ast.rs  interpreter.rs
tests/: breaking.mo  sample.mo  standard.mo  turing.mo
