cabal-version:      2.4
name:               monument
version:            0.1.0.0
synopsis:           A basic term rewriting system
description:        monument aims to be a simple term rewriting system implemented in Haskell.
-- bug-reports:        https://github.com/fivegrant/monument/issues
-- license:            GPL
license-file:       LICENSE
author:             Five Grant (5@fivegrant.com)
category:           mathematics
extra-source-files:
    CHANGELOG.md
    README.md

executable monument
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
