cabal-version:      2.4
name:               monument
version:            0.1.0.0
synopsis:           A basic term rewriting system
description:        monument aims to be a simple term rewriting system implemented in Haskell.
-- bug-reports:        https://github.com/fivegrant/monument/issues
-- license:            GPL
license-file:       LICENSE
author:             Five Grant (5@fivegrant.com)
category:           mathematics
extra-source-files:
    CHANGELOG.md
    README.md

executable monument
    main-is:          Main.hs
    other-modules:    Lib.Component.Rule
                      Lib.Component.Term
                      Lib.System.TRS
                      Lib.System.ENFA
                      Lib.Utils.List
                      Lib.Parse.Meta
                      Lib.Parse.Parser
                      Lib.Parse.Comment
                      Lib.Parse.Term
                      Lib.Parse.Rule
                      Lib.Parse.Regexlike
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      ordered-containers,
                      megaparsec,
                      regexpr
    hs-source-dirs:   app
    default-language: Haskell2010
